--- a/css/styles.css
+++ b/css/styles.css
@@ -14,19 +14,8 @@
 
 
 
-/* CALENDAR
+/* CALENDAR > SEE SEPARATE CSS
 ******************************************************************************/
-.tribe-events-list-widget {
-	background-color: #6d9f71;
-}
-
-.tribe-events-list-widget > .widget-title {
-	color: #347458;
-}
-
-.tribe-events-list-widget > .tribe-event-title {
-	color: #d7dbc8;
-}
 
 
 
