Finish events sidebar

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,18 +50,16 @@ h1,h2,h3,h4,h5,h6 { font-family: 'Lato', sans-serif !important; font-weight: 700
 /* HEADER / NAVBAR
 ******************************************************************************/
 
-.dropdown-menu {
-  top: 80%;
-}
-
 .navbar {
     margin: 10px auto;
 }
-/* .navbar a {
-    color: #347458 !important;
+.navbar a {
+    /* color: #347458 !important;
     text-decoration: none !important;
-    background-color: transparent !important;
-} */
+    background-color: transparent !important; */
+
+    line-height: 1.4rem;
+}
 .header-logo {
     width: 230px !important;
     height: 54px !important;
@@ -72,6 +70,9 @@ h1,h2,h3,h4,h5,h6 { font-family: 'Lato', sans-serif !important; font-weight: 700
 .navbar-nav>.dropdown {
     font-size: 18px;
     padding: 10px;
+}
+.dropdown-menu {
+  top: 80%;
 }
 @media only screen and (min-width: 768px) {
     /* make page dropdown parents into a link */
@@ -263,7 +264,9 @@ a.menu:after, .dropdown-toggle:after {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
+.event-section {
+    color:#fff;
+}
 .event-link {
     display: block;
     text-decoration: none;
@@ -277,7 +280,7 @@ a.menu:after, .dropdown-toggle:after {
     color: #fff;
     padding: 6px 0 18px 0;
     width: 60px;
-    margin:0 auto;
+    margin:0 auto 6px;
 }
 .date-day {
     font-size: 2rem !important;
@@ -294,10 +297,15 @@ a.menu:after, .dropdown-toggle:after {
     font-size: 1.2rem;
 }
 .event-content {
-    color: #f4f3e7 !important; }
+    color: #f4f3e7 !important;
+}
 
 
 
+.event-sidebar {
+    padding: 10px 20px;
+    color:#fff;
+}
 
 
 
