--- a/css/styles.css
+++ b/css/styles.css
@@ -15,23 +15,45 @@ a:hover {
     text-decoration: underline;
 }
 
-h1,h2,h3,h4,h5,h6 { font-family: 'Lato', sans-serif !important; font-weight: 700; }
+h1,h2,h3,h4,h5,h6 { font-family: 'Lato', sans-serif !important; font-weight: 700; line-height: normal;}
+h3.callout, h4.callout { font-weight: normal; }
+
+
+.dark-green { color: #337357 !important; }
+.light-green { color: #6d9f71 !important; }
+.tan { color: #f4f3e7 !important; }
+
+
+
 
 
 /* FORM ELEMENTS
 ******************************************************************************/
 
+.btn {
+    white-space:normal !important; /* make buttons wrap */
+}
 .btn, button, input, .form-control {
     border-radius: 0;
 }
-.btn-primary, .btn-secondary {
+.btn-primary {
     background-color: #347458 !important;
     border-color: #347458 !important;
     color: #fff !important;
 }
-.btn-primary:hover, .btn-secondary:hover {
+.btn-primary:hover {
     background-color: #29634a !important;
     border-color: #29634a !important;
+    color: #fff !important;
+}
+.btn-secondary {
+    background-color: #6d9f71 !important;
+    border-color: #6d9f71 !important;
+    color: #fff !important;
+}
+.btn-secondary:hover {
+    background-color: #5b9060 !important;
+    border-color: #5b9060 !important;
     color: #fff !important;
 }
 .btn-info {
@@ -74,6 +96,47 @@ h1,h2,h3,h4,h5,h6 { font-family: 'Lato', sans-serif !important; font-weight: 700
 .dropdown-menu {
   top: 80%;
 }
+
+
+@media (min-width: 0px) {
+    .header-logo {
+        width: 150px !important;
+    }
+    .navbar .btn-primary {
+        padding:5px 7px;
+        font-size:80%;
+        line-height: 1rem;
+    }
+}
+@media (min-width: 576px) {
+    .header-logo {
+        width: 230px !important;
+        height: 54px !important;
+    }
+    .navbar .btn-primary {
+        line-height: 1.4rem;
+        padding: .5rem 1rem;
+        font-size: 1rem;
+        padding:8px 16px;
+    }
+}
+@media (min-width: 768px) and (max-width: 992px) {
+    .header-logo {
+        width: 170px !important;
+    }
+    .navbar-nav>.dropdown { padding: 3px; font-size: 80%; }
+    .navbar .btn-primary {
+        padding:4px 5px;
+        font-size:90%;
+        line-height: 1.2rem;
+    }
+}
+@media (min-width: 992px) {
+}
+@media (min-width: 1200px) {
+}
+
+
 
 /* add submenu to hamburger */
 .navbar-nav li:hover > ul.dropdown-menu {
@@ -133,16 +196,26 @@ a.menu:after, .dropdown-toggle:after {
 
 /* HERO
 ******************************************************************************/
-.home-hero-light {
+.hero-light {
     color: #fff;
-    /* background-image: url("../img/hero-Kids-Looking-in-Water.jpg"); */
-    background-image: url("../../../uploads/2019/01/Kids-Looking-in-Water.jpg");
     height: 700px;
     background-position: center center;
     background-color: transparent;
     background-repeat: no-repeat;
     background-size: cover;
 }
+.home-hero {
+    /* background-image: url("../img/hero-Kids-Looking-in-Water.jpg"); */
+    background-image: url("../../../uploads/2019/01/Kids-Looking-in-Water.jpg");
+}
+.join-hero {
+    background-image:url("../../../uploads/2019/03/people-on-dock-hero.jpg")
+}
+.about-hero {
+    background-image:url("../img/about-page-butterfly-1800w.jpg")
+}
+
+
 .hero-content {
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
 }
@@ -193,6 +266,9 @@ a.menu:after, .dropdown-toggle:after {
     background-color: #337357;
     color: #ffffff;
     font-family: 'Lato', sans-serif !important;
+}
+.wrapper-dark-green a {
+    color: #f4f3e7 !important;
 }
 .wrapper-light-green {
     background-color: #6d9f71;
