--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ html {
 }
 a {
     color: #347458 !important;
-    text-decoration: none !important;
+    text-decoration: underline !important;
     background-color: transparent !important;
 }
 a:hover {
@@ -17,6 +17,10 @@ a:hover {
 
 h1,h2,h3,h4,h5,h6 { font-family: 'Lato', sans-serif !important; font-weight: 700; line-height: normal;}
 h3.callout, h4.callout { font-weight: normal; }
+
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+    text-decoration: none !important;
+}
 
 
 .dark-green { color: #337357 !important; }
@@ -31,6 +35,7 @@ h3.callout, h4.callout { font-weight: normal; }
 ******************************************************************************/
 
 .btn {
+    text-decoration: none !important;
     white-space:normal !important; /* make buttons wrap */
 }
 .btn, button, input, .form-control {
@@ -79,10 +84,18 @@ h3.callout, h4.callout { font-weight: normal; }
 
 
 
+.page-link.current {
+    background-color: #347458 !important;
+    border-color: #347458 !important;    
+    text-decoration: none !important;
+}
+
+
 /* HEADER / NAVBAR
 ******************************************************************************/
 
 .navbar {
+    text-decoration: none !important;
     margin: 10px auto;
 }
 .navbar a {
@@ -90,6 +103,7 @@ h3.callout, h4.callout { font-weight: normal; }
     text-decoration: none !important;
     background-color: transparent !important; */
 
+    text-decoration: none !important;
     line-height: 1.4rem;
 }
 .header-logo {
@@ -394,12 +408,13 @@ a.menu:after, .dropdown-toggle:after {
 }
 .event-link {
     display: block;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 .date-event {
     margin-top: 20px;
     color: #fff;
 }
+
 .date-box {
     background-color: #337357;
     color: #fff;
@@ -423,6 +438,7 @@ a.menu:after, .dropdown-toggle:after {
 }
 .event-content {
     color: #f4f3e7 !important;
+    text-decoration: none !important;
 }
 
 
@@ -440,6 +456,9 @@ a.menu:after, .dropdown-toggle:after {
 
 .entry-footer { float: none; clear: both; padding-top: 20px; }
 .edit-link { display: block; padding-top: 20px; }
+
+
+.featured-image { max-width: 250px !important; }
 
 
 /* FOOTER
