--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,33 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     color: #fff !important;
 }
 
+.btn:focus,
+textarea:focus, 
+input[type="text"]:focus, 
+input[type="password"]:focus, 
+input[type="datetime"]:focus, 
+input[type="datetime-local"]:focus, 
+input[type="date"]:focus, 
+input[type="month"]:focus, 
+input[type="time"]:focus, 
+input[type="week"]:focus, 
+input[type="number"]:focus, 
+input[type="email"]:focus, 
+input[type="url"]:focus, 
+input[type="search"]:focus, 
+input[type="tel"]:focus, 
+input[type="color"]:focus, 
+.uneditable-input:focus {   
+    box-shadow: none !important;
+    outline: 0 !important;
+}
+
+select:focus {
+   outline-color: transparent !important;
+}
+
+
+
 
 .page-link.current {
     background-color: #347458 !important;
